welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:17: error: illegal start of simple expression
			else if () {
                                 ^Program:20: error: ')' expected but '}' found.
    recule(6)}
             ^